--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html, 
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+app-root {
+  display: block;
+  height: 100%;
+  background-color:#111;
+}
