--- a/src/app/searchpage/searchpage.component.css
+++ b/src/app/searchpage/searchpage.component.css
@@ -48,3 +48,11 @@ button {
   margin-right: 10px;
   margin: 5px;
 }
+
+.cardData {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start
+}
