--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,28 +2,36 @@
 <div [hidden]='!loading' class="row justify-content-center loader"></div>
 <table [hidden]='loading' mat-table #table [dataSource]="dataSource">
 
-    <!-- Position Column -->
+    <!-- ID Column -->
     <ng-container matColumnDef="match_id">
       <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let game"> {{game.match_id}} </td>
+      <td mat-cell *matCellDef="let game"><a routerLink='/match/{{game.match_id}}'> {{game.match_id}} </a></td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Hero Column -->
     <ng-container matColumnDef="hero_id">
       <th mat-header-cell *matHeaderCellDef> Hero </th>
-      <td mat-cell *matCellDef="let game"> {{game.hero_id}} </td>
+      <td mat-cell *matCellDef="let game"> <img src="https://api.opendota.com/apps/dota2/images/heroes/{{game.hero.name.replace('npc_dota_hero_', '')}}_sb.png" /> </td>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- Side Column -->
+    <ng-container matColumnDef="player_slot">
+        <th mat-header-cell *matHeaderCellDef> Side </th>
+        <td mat-cell *matCellDef="let game"> {{game.player_slot < 5 ? 'Radiant' : 'Dire'}}</td>
+      </ng-container>
+
+    <!-- Duration Column -->
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef> Duration </th>
-      <td mat-cell *matCellDef="let game"> {{game.duration}} </td>
+      <td mat-cell *matCellDef="let game"> {{(game.duration/60).toFixed(0)}} min </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Winner Column -->
     <ng-container matColumnDef="radiant_win">
       <th mat-header-cell *matHeaderCellDef> Winner </th>
-      <td mat-cell *matCellDef="let game"> {{game.radiant_win}} </td>
+      <td mat-cell *matCellDef="let game"> 
+        {{game.radiant_win ? 'Radiant' : 'Dire'}}
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
